--- a/JasonetteWorkflow/app/src/main/res/values/strings.xml
+++ b/JasonetteWorkflow/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OGX Workflow</string>
+    <string name="app_name">DGX Workflow</string>
     <!--<string name="url">https://sandhyasrini.github.io/json/workflow.json</string>-->
     <string name="url">https://raw.githubusercontent.com/ENU-Digital/enudigital.github.io/master/json/workflow.json</string>
     <string name="launch">file://preload.json</string>
